# ovhapi2openapi

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
.github/workflows/: main.yaml  release.yaml  skip.yml
src/ovhapi2openapi/: __main__.py  cli.py
src/ovhapi2openapi/console/: application.py
src/ovhapi2openapi/data/: servers.yaml
tests/: test_cli.py
