[tool.poetry]
name = "ovhapi2openapi"
version = "1.0.0-alpha"
description = "Tool to convert an OVH API schema to an OpenAPI schema."

license = "AGPL-3.0-only"
authors = [
    "William Gérald Blondel <contact@williamblondel.fr>"
]
maintainers = [
]

readme = "README.md"
homepage = "https://github.com/wblondel/ovhapi2openapi"
repository = "https://github.com/wblondel/ovhapi2openapi"
documentation = ""

keywords = ["OVH", "api", "openapi"]
#TODO [DEVTOOLS] [POETRY] Add more classifiers
classifiers = [
    "Natural Language :: English",
    "Natural Language :: French"
]

packages = [
    { include = "ovhapi2openapi", from = "src" }
]
include = [
    { path = "CHANGELOG.md" },
    { path = "tests", format = "sdist" }
]

[tool.poetry.build]
generate-setup-file = false

# Requirements
[tool.poetry.dependencies]
python = "^3.7"
click = "^8.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
pytest-sugar = "^0.9"
pytest-mock = "^3.7"
pytest-cov = "^3.0"
pre-commit = "^2.17"

[tool.poetry.scripts]
ovhapi2openapi = "ovhapi2openapi.console.application:cli"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"



[tool.black]
target-version = ['py37']
experimental_string_processing = true
force-exclude = '''
.*/setup\.py$
'''


[tool.mypy]
# Import discovery
ignore_missing_imports = false
files = ["src", "tests"]

# Untyped definitions and calls
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

# None and Optional handling
no_implicit_optional = true
strict_optional = true

# Configuring warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true

# Suppressing errors
show_none_errors = true
ignore_errors = false

# Miscellaneous strictness flags
allow_untyped_globals = false
allow_redefinition = false
local_partial_types = false
implicit_reexport = true
strict_equality = false
strict = false

# Configuring error messages
show_error_context = false
show_column_numbers = false
show_error_codes = true
pretty = false
color_output = true
error_summary = true
show_absolute_path = false

# Incremental mode
incremental = false

# Miscellaneous
warn_unused_configs = true


[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]
